toggle z-index fixed

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -55,6 +55,7 @@
     visibility: hidden;
 }
 .toggle-div{
+    z-index: 0;
    position: relative;
    padding-left: 40em;
 }
