--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,4 +1,5 @@
 .modal {
+  z-index: 1;
   position: fixed;
   top: 0;
   right: 0;
